SERVER-50504 $facet+$match on positional path does not seem to pass results to certain subsequent stages